...
            ) // .tag(1)
            Annotation(
                "Sign-in",
                coordinate: MyLocation.googleHeadquarters.coordinate
//                anchor: .bottom
            ) {
                Image(systemName: "suitcase")
                    .padding()
                    .foregroundStyle(.white)
                    .background(.blue)
                    .clipShape(.circle)
            } // .tag(2)
            MapCircle(center: MyLocation.appleHeadquarters.coordinate, radius: 10000)
...
                            }
                            .clipShape(.rect(cornerRadius: 10))
                            .frame(maxHeight: 100)
                        }
                        HStack {
                            Spacer()
                            Button("Parks") {
                                search(for: "park")
                            }.buttonStyle(.borderedProminent)
                            Button("Toilets") {
                                search(for: "toilet")
                            }.buttonStyle(.borderedProminent)

...
